--- a/elastic-cross.tex
+++ b/elastic-cross.tex
@@ -5,6 +5,6 @@
 \includegraphics[width=\maxwidth]{figure/robust:cr-elastic-1} 
 
 \end{knitrout}
-    \caption{Elastic cross traffic. \an{explain this result??}}
+    \caption{Elastic cross traffic. We modify Copa to use Nimbus's elasticity detector.}
     \label{fig:robust:cr-elastic}
 \end{figure}
