--- a/graphs/elastic-cross.Rnw
+++ b/graphs/elastic-cross.Rnw
@@ -14,7 +14,7 @@ df <- df[df$Alg != "copa_sfq" & df$Alg != "bbr_sfq",]
 
 ggplot(df, aes(x=factor(Cross), y=Slowdown, fill=Alg)) + 
     geom_boxplot(outlier.shape=NA) + 
-    coord_cartesian(ylim=c(1,20)) +
+    coord_cartesian(ylim=c(1,10)) +
     ylab("Slowdown") +
     xlab(NULL) +
     scale_fill_brewer(type="qual", palette=1,
@@ -29,6 +29,6 @@ ggplot(df, aes(x=factor(Cross), y=Slowdown, fill=Alg)) +
         text = element_text(size=18, family="Lato", face="bold")
     )
 @
-    \caption{Elastic cross traffic. \an{explain this result??}}
+    \caption{Elastic cross traffic. We modify Copa to use Nimbus's elasticity detector.}
     \label{fig:robust:cr-elastic}
 \end{figure}
